# y-cli

./: .clinerules  .gitignore  CHANGELOG.md  README.md  cloudflare-worker.js  flake.nix  pyproject.toml  release.sh  wrangler.toml.sample
.github/workflows/: publish.yml
docs/: CLOUDFLARE_STORAGE.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: config.py  util.py
src/bot/: __init__.py  config_manager.py  models.py  repository.py  service.py
src/chat/: app.py  chat_manager.py  cli.py  config.py  display_manager.py  input_manager.py  mcp_manager.py  models.py  openai_manager.py  openrouter_chat_importer.py  openrouter_manager.py  preset_manager.py  repository.py  service.py  system.py  util.py
src/chat/cli/: __init__.py
src/chat/cli/commands/: chat.py  init.py  list.py  share.py
src/chat/importer/: openrouter_chat_importer.py
src/chat/provider/: base_provider.py  dify_provider.py  display_manager_mixin.py  openai_format_provider.py  topia_provider.py
src/chat/repository/: __init__.py  cloudflare.py  cloudflare_client.py  factory.py  file.py
src/chat/utils/: message_utils.py  tool_utils.py
src/cli/: __init__.py  display_manager.py  input_manager.py
src/cli/commands/: chat.py  init.py  list.py  share.py
src/cli/commands/bot/: __init__.py  add.py  delete.py  list.py
src/cli/commands/mcp/: __init__.py  add.py  delete.py  list.py
src/mcp_server/: __init__.py  mcp_manager.py  models.py  repository.py  service.py
src/mcp_setting/: mcp_manager.py  system.py
(+4 files in other folders)
