[project]
name = "y-cli"
version = "0.2.2"
description = "Command-line real-time conversation app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.1.0",
    "toml>=0.10.2",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
    "rich>=13.9.4",
    "pyperclip>=1.9.0",
    "mcp>=1.2.1",
    "openai>=1.61.1",
]

[project.scripts]
y-cli = "chat.cli:cli"

[[tool.uv.index]]
# Optional name for the index.
name = "tuna"
# Required URL for the index.
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
